# AxisAntiCheat-main

./: .gitignore  CMakeLists.txt  README.md
adclient/: CMakeLists.txt  adclient.map
adclient/lib/: xorstr.hpp
adclient/lib/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
adclient/lib/nlohmann/detail/: abi_macros.hpp  exceptions.hpp  hash.hpp  json_pointer.hpp  json_ref.hpp  macro_scope.hpp  macro_unscope.hpp  string_concat.hpp  string_escape.hpp  value_t.hpp
adclient/lib/nlohmann/detail/conversions/: from_json.hpp  to_chars.hpp  to_json.hpp
adclient/lib/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
adclient/lib/nlohmann/detail/iterators/: internal_iterator.hpp  iter_impl.hpp  iteration_proxy.hpp  iterator_traits.hpp  json_reverse_iterator.hpp  primitive_iterator.hpp
adclient/lib/nlohmann/detail/meta/: cpp_future.hpp  detected.hpp  identity_tag.hpp  is_sax.hpp  std_fs.hpp  type_traits.hpp  void_t.hpp
adclient/lib/nlohmann/detail/meta/call_std/: begin.hpp  end.hpp
adclient/lib/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
adclient/src/: entry.cpp  includes.hpp
adclient/src/core/: image.hpp  interface.cpp  interface.hpp  structs.hpp  utilities.cpp  utilities.hpp  win.hpp
adclient/src/cryptography/: crc_checksum.hpp  fnv1a.hpp
adclient/src/hooks/: hooks.cpp  hooks.hpp  iat_hook.hpp
adclient/src/utilities/: safe_call.hpp  safe_syscall.hpp
adserver/: CMakeLists.txt  adclient.map
(+2 files in other folders)
